[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["Anurag Jha <toanuragjha@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
aiohttp = "^3.8.1"
boto3 = "^1.22.4"
boto3-stubs = "^1.22.4"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
