[tool.poetry]
name = "logger"
version = "0.1.0"
description = ""
authors = ["Anurag Jha <toanuragjha@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
